@@ -5,6 +5,7 @@ Version 2.0  2010-07-10
  * make install copy config files
  * tracker.conf add two parameters: storage_sync_file_max_delay and 
    storage_sync_file_max_time
+ * client tracker_get_connection increase server_index correctly
 
 Version 1.29  2010-06-30
  * add files: tracker_dump.h and tracker_dump.c, tracker dump global vars
